# vda5050_client

./: .clang-format  .gitignore  CMakeLists.txt  README.md  package.xml
cmake/: vda5050_ament_lint_common.cmake  (+1 more)
vda5050_bt_execution/: CMakeLists.txt  package.xml
vda5050_bt_execution/include/vda5050_bt_execution/bt_execution/: client_config.hpp  execution_context.hpp  execution_engine.hpp  robot_adapter_interface.hpp
vda5050_bt_execution/include/vda5050_bt_execution/bt_nodes/: execute_order.hpp  monitor_connection.hpp  update_order.hpp  update_state.hpp
vda5050_bt_execution/include/vda5050_bt_execution/bt_utils/: robot_adapter.hpp  state_publisher.hpp
vda5050_bt_execution/src/: main.cpp
vda5050_bt_execution/src/vda5050_bt_execution/bt_execution/: execution_engine.cpp
vda5050_bt_execution/src/vda5050_bt_execution/bt_nodes/: execute_order.cpp  monitor_connection.cpp  update_order.cpp  update_state.cpp
vda5050_bt_execution/src/vda5050_bt_execution/bt_utils/: robot_adapter.cpp  state_publisher.cpp
vda5050_core/: CMakeLists.txt  package.xml
vda5050_core/cmake/: vda5050_ament_lint_common.cmake  vda5050_configure_target_alias.cmake
vda5050_core/examples/: engine_example.cpp  handler_integration.cpp
vda5050_core/include/vda5050_core/errors/: error_codes.hpp  error_factory.hpp
vda5050_core/include/vda5050_core/execution/: protocol_adapter.hpp
vda5050_core/include/vda5050_core/master/: master.hpp  standard_names.hpp
vda5050_core/include/vda5050_core/mqtt_client/: mqtt_client_interface.hpp  paho_mqtt_client.hpp
vda5050_core/include/vda5050_core/order/: order_graph_validator.hpp
vda5050_core/include/vda5050_core/order_graph_validator/: order_graph_validator.hpp
vda5050_core/include/vda5050_core/state_manager/: state_manager.hpp
vda5050_core/include/vda5050_core/transport/: mqtt_client_interface.hpp  paho_mqtt_client.hpp
vda5050_core/src/execution/: engine.cpp  protocol_adapter.cpp
vda5050_core/src/master/: agv.cpp  heartbeat.cpp  master.cpp
vda5050_core/src/transport/: paho_mqtt_client.cpp
vda5050_core/src/vda5050_core/client/: order_graph_validator.cpp
vda5050_core/src/vda5050_core/logger/: logger.cpp
vda5050_core/src/vda5050_core/mqtt_client/: paho_mqtt_client.cpp
vda5050_core/src/vda5050_core/order/: order_graph_validator.cpp
vda5050_core/src/vda5050_core/orderGraphValidator/: order_graph_validator.cpp
vda5050_core/src/vda5050_core/order_graph_validator/: order_graph_validator.cpp
vda5050_core/test/execution/: test_engine.cpp  test_protocol_adapter.cpp
vda5050_core/test/master/: test_integration_heartbeat.cpp  test_integration_master_logic.cpp  test_integration_master_teardown.cpp
vda5050_core/test/transport/: test_integration_paho_mqtt_client.cpp  test_unit_mqtt_client_interface.cpp
vda5050_examples/: CMakeLists.txt  README.md  package.xml
vda5050_examples/config/: ros_gz_interface_bridge.yaml
vda5050_examples/include/vda5050_examples/: robot_adapter.hpp
vda5050_examples/launch/: warehouse.launch.py
vda5050_examples/src/: bt_execution_main.cpp  execution_handler.cpp  master_control.cpp  sequential_execution.cpp
vda5050_examples/src/vda5050_examples/: robot_adapter.cpp
vda5050_examples/worlds/: warehouse.sdf
vda5050_execution/: CMakeLists.txt  README.md  package.xml
vda5050_execution/docs/: design.md
vda5050_execution/examples/: custom_base.cpp  engine_example.cpp  example_client.cpp  handler_integration.cpp  provider_example.cpp
vda5050_execution/examples/vda5050_client/: example_client.cpp  mock_master_control.cpp
vda5050_execution/include/vda5050_execution/: base.hpp  base_execution_context.hpp  callback_registry.hpp  client_config.hpp  context_interface.hpp  engine.hpp  event.hpp  event_queue.hpp  execution_context_interface.hpp  execution_delegate_interface.hpp  execution_engine.hpp  execution_handler.hpp  execution_strategy_interface.hpp  handler.hpp  protocol_adapter.hpp  provider.hpp  sequential_execution_strategy.hpp  strategy_interface.hpp  update.hpp
vda5050_execution/src/vda5050_execution/: base_execution_context.cpp  callback_registry.cpp  engine.cpp  event_queue.cpp  execution_engine.cpp  execution_handler.cpp  handler.cpp  protocol_adapter.cpp  provider.cpp  sequential_execution_strategy.cpp
vda5050_execution/test/integration/: test_handler.cpp
vda5050_execution/test/unit/: test_callback_registry.cpp  test_engine.cpp  test_event_queue.cpp  test_execution_engine.cpp  test_protocol_adapter.cpp  test_provider.cpp
vda5050_json_utils/: CMakeLists.txt  package.xml
vda5050_json_utils/include/vda5050_json_utils/: serialization.hpp  traits.hpp
vda5050_json_utils/test/: test_json_utils.cpp  test_json_utils_ros2.cpp
vda5050_json_utils/test/generator/: generator.hpp  generator_ros2.hpp
vda5050_master/: CMakeLists.txt  package.xml
vda5050_master/include/vda5050_master/: standard_names.hpp  vda5050_interfaces.hpp
vda5050_master/src/agv/: agv.cpp
vda5050_master/src/vda5050_master/: master.cpp
vda5050_master/test/agv/: agv_connection_state_test.cpp  agv_lifecycle_test.cpp  agv_operational_state_test.cpp  agv_test_fixture.hpp
vda5050_master/test/communication/: test_helpers.hpp
vda5050_master/test/integration/: heartbeat.cpp
vda5050_master/test/master/: master_logic_test.cpp  master_mqtt_test.cpp  teardown_test.cpp
vda5050_types/: CMakeLists.txt  package.xml
vda5050_types/include/vda5050_types/: action.hpp  action_parameter.hpp  action_parameter_factsheet.hpp  action_scope.hpp  action_state.hpp  action_status.hpp  agv_action.hpp  agv_class.hpp  agv_geometry.hpp  agv_kinematic.hpp  agv_position.hpp  battery_state.hpp  blocking_type.hpp  bounding_box_reference.hpp  connection.hpp  connection_state.hpp  control_point.hpp  e_stop.hpp  edge.hpp  edge_state.hpp  envelope2d.hpp  envelope3d.hpp  error.hpp  error_level.hpp  error_reference.hpp  factsheet.hpp  header.hpp  info.hpp  info_level.hpp  info_reference.hpp  instant_actions.hpp  load.hpp  load_dimensions.hpp  load_set.hpp  load_specification.hpp  max_array_lens.hpp  max_string_lens.hpp  network.hpp  node.hpp  node_position.hpp  (+25 more)
(+71 files in other folders)
